# debconf-translator

./: PROMPT.md  README.md  pyproject.toml  setup.py
.tx/: config
data/: se.danielnylander.debconf-translator.desktop
debconf_translator/: __init__.py  __main__.py  app.py  models.py  scraper.py  window.py
debconf_translator/cli/: __init__.py
debconf_translator/views/: __init__.py  dashboard.py  packages.py  reviews.py  settings.py  submit.py
debconf_translator/widgets/: __init__.py  po_editor.py
debian/: changelog  control  copyright  install  rules
po/: debconf-translator.pot  sv.po
