[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debconf-translator"
version = "0.3.1"
description = "GTK4/Adwaita tool for managing Debconf template translations"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]

[project.scripts]
debconf-translator = "debconf_translator.cli:main"

[project.urls]
Homepage = "https://github.com/yeager/debconf-translator"
"Bug Tracker" = "https://github.com/yeager/debconf-translator/issues"

[tool.setuptools.packages.find]
include = ["debconf_translator*"]
